--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,15 +7,12 @@ body {
     opacity: 0.85;
     padding-top: 30px;
     padding-bottom: 30px;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-bottom-color: #357b93;
 }
 
 h1 {
     font-family: 'Aclonica', sans-serif;
     font-size: 40px; 
-    color: #357b93; 
+    color: #62be3b; 
     font-style: bold; 
 }
 
