--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 h1 {
     font-family: 'Aclonica', sans-serif;
     font-size: 40px; 
-    color: #62be3b; 
+    color: #221c25; 
     font-style: bold; 
 }
 
