--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: zeldaFont;
+    src: url(../font/HyliaSerifBeta-Regular.otf)
+}
+
 body {
     background-image: url("../images/crystal-game-background.jpg")
 }
@@ -11,7 +16,7 @@ body {
 }
 
 h1 {
-    font-family: 'Aclonica', sans-serif;
+    font-family: zeldaFont;
     font-size: 40px; 
     color: #221c25; 
     font-style: bold; 
@@ -19,7 +24,7 @@ h1 {
 }
 
 h4, h5 {
-    font-family: 'Aclonica', sans-serif; 
+    font-family: zeldaFont;  
 }
 
 p {
