fixed body styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    background-image: url("../images/crystal-game-background.jpg")
+    background-image: url("../images/crystal-game-background.jpg"); 
+    height: 140;
 }
 
 #jumbotron {
