fixed background image added screenshot

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,13 @@
     src: url(../font/HyliaSerifBeta-Regular.otf)
 }
 
+
 body {
-    background-image: url("../images/crystal-game-background.jpg"); 
-    height: 140;
+    background-image: url(../images/crystal-game-background.jpg);
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
 }
 
 #jumbotron {
